unpackaged/main/default/objects/OrderApi__EPayment__c/OrderApi__EPayment__c.object-meta.xml
<CustomObject>
    <description>ePayment api transaction logging.</description>
    <label>ePayment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ePayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>