unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Cancelled_Date__c</fullName>
    <description>** System Generated ** Cancelled Date from GoCardless for this payment</description>
    <inlineHelpText>** System Generated ** Cancelled Date from GoCardless for this payment</inlineHelpText>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>