unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__Confirmed__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Generated ** The payment has been collected from the customer’s bank account, and is now being held by GoCardless.</description>
    <inlineHelpText>** System Generated ** The payment has been collected from the customer’s bank account, and is now being held by GoCardless.</inlineHelpText>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>