unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Confirmed_Date__c</fullName>
    <description>** System Generated ** Date when the payment has been collected from the customer’s bank account, and is now being held by GoCardless.</description>
    <inlineHelpText>** System Generated ** Date when the payment has been collected from the customer’s bank account, and is now being held by GoCardless.</inlineHelpText>
    <label>Confirmed Date</label>
    <type>Date</type>
</CustomField>