unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__Date_of_Failure__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Date_of_Failure__c</fullName>
    <description>** System Generated ** Failed Date from GoCardless for this payment</description>
    <inlineHelpText>** System Generated ** Failed Date from GoCardless for this payment</inlineHelpText>
    <label>Date of Failure</label>
    <type>Date</type>
</CustomField>