unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__Direct_Debit_Response__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Direct_Debit_Response__c</fullName>
    <description>** System Generated ** HTTP Response Body whenever connected to GoCardless</description>
    <inlineHelpText>** System Generated ** HTTP Response Body whenever connected to GoCardless</inlineHelpText>
    <label>Direct Debit Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>