unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__GoCardless_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>DDApi__GoCardless_Payment_Id__c</fullName>
    <description>** System Generated ** Payment Id created in GoCardless</description>
    <inlineHelpText>** System Generated ** Payment Id created in GoCardless</inlineHelpText>
    <label>GoCardless Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>