unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__Submitted__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Generated ** When checked, The payment has been submitted to the banks. It will be a few days until it is collected, or fails.</description>
    <inlineHelpText>** System Generated ** When checked, The payment has been submitted to the banks. It will be a few days until it is collected, or fails.</inlineHelpText>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>