unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Submitted_Date__c</fullName>
    <description>** System Generated ** Date when the payment has been submitted to the banks. It will be a few days until it is collected, or fails.</description>
    <inlineHelpText>** System Generated ** Date when the payment has been submitted to the banks. It will be a few days until it is collected, or fails.</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>