unpackaged/main/default/objects/OrderApi__EPayment__c/fields/DDApi__Succeeded_Date__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Succeeded_Date__c</fullName>
    <description>** Custom Field ** Date when this Epayment has been succeeded</description>
    <inlineHelpText>** Custom Field ** Date when this Epayment has been succeeded</inlineHelpText>
    <label>Succeeded Date</label>
    <type>Date</type>
</CustomField>