unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to the related account (if applicable).</description>
    <inlineHelpText>**System Calculated** Link to the related account (if applicable).</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>