unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Amount__c</fullName>
    <description>**System Calculated** Sum of the &quot;Total&quot; field of related Payment Activity Lines.</description>
    <inlineHelpText>**System Calculated** Sum of the &quot;Total&quot; field of related Payment Activity Lines.</inlineHelpText>
    <label>Amount</label>
    <summarizedField>OrderApi__EPayment_Line__c.OrderApi__Total__c</summarizedField>
    <summaryForeignKey>OrderApi__EPayment_Line__c.OrderApi__EPayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>