unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__API_Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__API_Amount__c</fullName>
    <description>**System Calculated** API Amount (String) Value of ABS(Amount) * 100.</description>
    <formula>TEXT(ABS(OrderApi__Amount__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** API Amount (String) Value of ABS(Amount) * 100.</inlineHelpText>
    <label>API Amount</label>
    <type>Text</type>
</CustomField>