unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__API_Response__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__API_Response__c</fullName>
    <description>Stores the API response received from the gateway.</description>
    <inlineHelpText>Stores the API response received from the gateway.</inlineHelpText>
    <label>API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>