unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__AVS_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__AVS_Code__c</fullName>
    <description>**System Calculated** AVS (Address Verification Service) returned in the response of the api transaction.</description>
    <inlineHelpText>**System Calculated** AVS (Address Verification Service) returned in the response of the api transaction.</inlineHelpText>
    <label>AVS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>