unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__AVS_Message__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__AVS_Message__c</fullName>
    <description>**System Calculated** AVS (Address Verification Service) Message.</description>
    <inlineHelpText>**System Calculated** AVS (Address Verification Service) Message.</inlineHelpText>
    <label>AVS Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>