unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Bank_Account_Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Bank_Account_Holder_Type__c</fullName>
    <description>Bank account holder type for the echeck or direct debit payment method (when supported by your payment gateway).</description>
    <inlineHelpText>Bank account holder type for the echeck or direct debit payment method (when supported by your payment gateway).</inlineHelpText>
    <label>Bank Account Holder Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>