unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Bank_Account_Type__c</fullName>
    <description>The bank account type for echeck or direct debit payments (when supported by your payment gateway).</description>
    <inlineHelpText>The bank account type for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
    <label>Bank Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>