unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Bank_Name__c</fullName>
    <description>The bank name for echeck or direct debit payments (when supported by your payment gateway).</description>
    <inlineHelpText>The bank name for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>