unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Bank_Routing_Number__c</fullName>
    <description>The bank account routing number for echeck or direct debit payments (when supported by your payment gateway).</description>
    <inlineHelpText>The bank account routing number for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
    <label>Bank Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>