unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Batch__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to related batch.</description>
    <inlineHelpText>**System Calculated** Link to related batch.</inlineHelpText>
    <label>Batch</label>
    <referenceTo>OrderApi__Batch__c</referenceTo>
    <relationshipName>Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>