unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Cancelled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Cancelled (true/false) returned in the response body of the API Transaction.</description>
    <inlineHelpText>**System Calculated** Cancelled (true/false) returned in the response body of the API Transaction.</inlineHelpText>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>