unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Card_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Card_Number__c</fullName>
    <description>The masked credit card number associated with the payment method.</description>
    <inlineHelpText>The masked credit card number associated with the payment method.</inlineHelpText>
    <label>Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>