unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Card_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Card_Type__c</fullName>
    <description>**System Calculated** The credit card type (if applicable).</description>
    <inlineHelpText>**System Calculated** The credit card type (if applicable).</inlineHelpText>
    <label>Card Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>