unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to the related contact record if applicable.</description>
    <inlineHelpText>**System Calculated** Link to the related contact record if applicable.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>