unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Create_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Create_Payment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the payment activity (if charged successfully) will create a new Payment Schedule, copying all Payment Activity Lines over to the detail of the new Payment Schedule. Default unchecked.</description>
    <inlineHelpText>When checked, the payment activity (if charged successfully) will create a new Payment Schedule, copying all Payment Activity Lines over to the detail of the new Payment Schedule. Default unchecked.</inlineHelpText>
    <label>Create Payment Schedule</label>
    <type>Checkbox</type>
</CustomField>