unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Currency_Code__c</fullName>
    <defaultValue>&quot;USD&quot;</defaultValue>
    <description>The iso-code for the currency used for the API transaction. Default is &quot;USD&quot;</description>
    <inlineHelpText>The iso-code for the currency used for the API transaction. Default is &quot;USD&quot;</inlineHelpText>
    <label>Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>