unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__CVV_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__CVV_Code__c</fullName>
    <description>**System Calculated** CVV (Card Verification Value) Code.</description>
    <inlineHelpText>**System Calculated** CVV (Card Verification Value) Code.</inlineHelpText>
    <label>CVV Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>