unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__CVV_Message__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__CVV_Message__c</fullName>
    <description>**System Calculated** CVV (Card Verification Value) Message.</description>
    <inlineHelpText>**System Calculated** CVV (Card Verification Value) Message.</inlineHelpText>
    <label>CVV Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>