unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <description>The date for the epayment.</description>
    <inlineHelpText>The date for the epayment.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>