unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deposit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to the deposit GL account.</description>
    <inlineHelpText>**System Calculated** Link to the deposit GL account.</inlineHelpText>
    <label>Deposit Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipName>Payment_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>