unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>**System Calculated** The description sent to the payment processor.</description>
    <inlineHelpText>**System Calculated** The description sent to the payment processor.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>