unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Eligible_for_Card_Updater__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Eligible_for_Card_Updater__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the payment method is available for the Card on File Updater service where Fonteva will update any expired or changed cards in your ePayment vault so that any future transactions are processed uninterrupted.</description>
    <inlineHelpText>When checked, the payment method is available for the Card on File Updater service where Fonteva will update any expired or changed cards in your ePayment vault so that any future transactions are processed uninterrupted.</inlineHelpText>
    <label>Eligible for Card Updater</label>
    <type>Checkbox</type>
</CustomField>