unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Email__c</fullName>
    <description>**System Calculated** The email address of the customer used to transact with the api.</description>
    <inlineHelpText>**System Calculated** The email address of the customer used to transact with the api.</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>