unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Entity__c</fullName>
    <description>**System Calculated** Valid values are &quot;Account&quot; and &quot;Contact&quot;, the system uses the entity field to determine the primary customer on a given transaction.</description>
    <inlineHelpText>**System Calculated** Valid values are &quot;Account&quot; and &quot;Contact&quot;, the system uses the entity field to determine the primary customer on a given transaction.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>