unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__EPayment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__EPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related EPayment which is authorized for payment.</description>
    <inlineHelpText>Link to the related EPayment which is authorized for payment.</inlineHelpText>
    <label>E-Payment (Source)</label>
    <referenceTo>OrderApi__EPayment__c</referenceTo>
    <relationshipLabel>EPayments</relationshipLabel>
    <relationshipName>EPayments</relationshipName>
    <type>Lookup</type>
</CustomField>