unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Error_Code__c</fullName>
    <description>The error code given by the payment gateway.</description>
    <inlineHelpText>The error code given by the payment gateway.</inlineHelpText>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>