unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Errors__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Errors__c</fullName>
    <description>**System Calculated** List of errors returned in the response of the api transaction.</description>
    <inlineHelpText>**System Calculated** List of errors returned in the response of the api transaction.</inlineHelpText>
    <label>Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>