unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__First_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__First_Name__c</fullName>
    <description>**System Calculated** The first name of the customer used to transact with the api.</description>
    <inlineHelpText>**System Calculated** The first name of the customer used to transact with the api.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>