unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Full_Name__c</fullName>
    <description>**System Calculated** The full name of the customer.</description>
    <inlineHelpText>**System Calculated** The full name of the customer.</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>