unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Gateway_Token__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Gateway_Token__c</fullName>
    <description>**System Calculated** The gateway token used for the API call.</description>
    <inlineHelpText>**System Calculated** The gateway token used for the API call.</inlineHelpText>
    <label>Gateway Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>