unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Gateway_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Gateway_Transaction_ID__c</fullName>
    <description>The transaction id for the epayment as stored by the connected payment gateway.</description>
    <inlineHelpText>The transaction id for the epayment as stored by the connected payment gateway.</inlineHelpText>
    <label>Gateway Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>