unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Has_Errors__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Has_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked when the api transaction responds with a one or more error messages.</description>
    <inlineHelpText>**System Calculated** Checked when the api transaction responds with a one or more error messages.</inlineHelpText>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>