unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__IP_Address__c</fullName>
    <description>**System Calculated** The IP (Internet Protocol) address send and returned in the api transaction response.</description>
    <inlineHelpText>**System Calculated** The IP (Internet Protocol) address send and returned in the api transaction response.</inlineHelpText>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>