unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Is_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated**</description>
    <inlineHelpText>**System Calculated**</inlineHelpText>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>