unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Is_ThreeDS__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_ThreeDS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System field</description>
    <inlineHelpText>System field</inlineHelpText>
    <label>System</label>
    <type>Checkbox</type>
</CustomField>