unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Is_Voided__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related EPayment is voided.</description>
    <inlineHelpText>When checked, the related EPayment is voided.</inlineHelpText>
    <label>Is Voided</label>
    <type>Checkbox</type>
</CustomField>