unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Last_4_Digits__c</fullName>
    <description>**System Calculated** The last four digits of the payment method number (credit card or bank account).</description>
    <inlineHelpText>**System Calculated** The last four digits of the payment method number (credit card or bank account).</inlineHelpText>
    <label>Last 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>