unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Merchant_Location_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Merchant_Location_Descriptor__c</fullName>
    <description>**System Calculated** The merchant location descriptor returned in the e-payment api transaction response.</description>
    <inlineHelpText>**System Calculated** The merchant location descriptor returned in the e-payment api transaction response.</inlineHelpText>
    <label>Merchant Location Descriptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>