unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Message__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Message__c</fullName>
    <description>The message sent in the response for the e-payment api transaction.</description>
    <inlineHelpText>The message sent in the response for the e-payment api transaction.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>