unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Month__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Month__c</fullName>
    <description>**System Calculated** The credit card expiration month (MM).</description>
    <inlineHelpText>**System Calculated** The credit card expiration month (MM).</inlineHelpText>
    <label>Exp Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>