unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Number__c</fullName>
    <description>**System Calculated** Masked (all but last four digits) version of the credit card or bank account number.</description>
    <inlineHelpText>**System Calculated** Masked (all but last four digits) version of the credit card or bank account number.</inlineHelpText>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>