unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__On_Test_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__On_Test_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked when the api transaction was invoked using a test gateway token.</description>
    <inlineHelpText>**System Calculated** Checked when the api transaction was invoked using a test gateway token.</inlineHelpText>
    <label>On Test Gateway</label>
    <type>Checkbox</type>
</CustomField>