unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Order_ID__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Order_ID__c</fullName>
    <description>The Fonteva Sales Order or Receipt number associated with the ePayment.</description>
    <inlineHelpText>The Fonteva Sales Order or Receipt number associated with the ePayment.</inlineHelpText>
    <label>Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>