unpackaged/main/default/objects/OrderApi__EPayment__c/fields/OrderApi__Path__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Path__c</fullName>
    <description>**System Calculated** Populates with the current web page path of the user when executing a new payment activity transaction.</description>
    <inlineHelpText>**System Calculated** Populates with the current web page path of the user when executing a new payment activity transaction.</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>